# raspberry_pi-workspace

./: .gitignore  .gitmodules  FaceID + Tracking.drawio  Makefile  README.md  arch.drawio  config.yaml.template  poetry.toml  pyproject.toml  requirements-dev.txt  requirements.txt  run-webui.sh
.addtional/editor/: Makefile  README.md
demos/gaze/: .gitignore  __init__.py  age_utils.py  config.yaml.template  demo_pipeline.py  gaze_post_processing.py  models.py  track_utils.py
demos/gaze-v2/: .gitignore  config.py  config.yaml.template  demo_pipeline.py  metadata_processor.py  models.py  track_utils.py  utils.py
demos/gazev3/: .gitignore  __init__.py  common.py  config-template.yaml  config.py  demo_pipeline.py  http_central_server.py  sqlite_db.py  tursor.py  utils.py
demos/helmet/: .gitignore  config.yaml.template  demo_pipeline.py  helmet_utils.py
demos/template/: config.yaml.template  demo_pipeline.py
development/: flask_server.py  meh.py  record_result.py  run_server.py  sdk-dev.yaml  self_contained_benchmark.py  smallest.py  sqlite-test.py  test-imports.py  what.py  ws_server_benchmark.py
development/scripts/: mem-check.sh
docs/: design.md  dev.md  todo.md
raspi-cam-srv-fork/: README.md  pyproject.toml  requirements.txt
raspi-cam-srv-fork/raspiCamSrv/: __init__.py  camCfg.py  home.py
scripts/: run_custom_script.py  show_result_to_hdmi.py  show_result_to_web_ui.py  upload_metadata_to_http_server.py  upload_metadata_with_trigger.py
scripts/web_ui/: README.md  package-lock.json  (+4 more)
sdk/: base_pipeline.py  cam.py  cam_controls.py  sqlite_adapter.py
(+55 files in other folders)
