[project]
name = "raspberry-pi-imx500-sdk"
version = "0.1.0"
description = ""
authors = [
    {name = "chuanhao",email = "chuanhao.lim@sony.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "sdk"},
]

[tool.pytest.ini_options]
testpaths = "sdk"
addopts = [
    "--import-mode=importlib",
]
